
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ssize_t ;
typedef int linkbuf ;


 int PR_SET_DUMPABLE ;
 int _exit (int ) ;
 int getpid () ;
 scalar_t__ memcmp (char*,char*,int) ;
 int prctl (int ,int) ;
 int printf (char*,...) ;
 int program_invocation_short_name ;
 int readlink (char*,char*,int) ;
 int sprintf (char*,char*,int) ;
 scalar_t__ strcmp (int ,char*) ;
 int strlen (char*) ;

__attribute__((constructor)) void run(void) {
 if (strcmp(program_invocation_short_name, "VirtualBox"))
  return;

 prctl(PR_SET_DUMPABLE, 1);
 printf("running in pid %d\n", getpid());
 printf("searching for vboxdrv file descriptor in current process...\n");
 char linkbuf[1000];
 char *needle = "/dev/vboxdrv";
 for (int i=0; i<1000; i++) {
  char linkpath[1000];
  sprintf(linkpath, "/proc/self/fd/%d", i);
  ssize_t linklen = readlink(linkpath, linkbuf, sizeof(linkbuf)-1);
  if (linklen == -1) continue;
  if (linklen == strlen(needle) && memcmp(linkbuf, needle, strlen(needle)) == 0) {
   printf("found it, fd %d is /dev/vboxdrv\n", i);
  }
 }
 _exit(0);
}
